# compositor

./: Cargo.toml  Makefile  README.md  build.rs
.agents/: rust.md
.github/workflows/: deploy-pages.yml
assets/: main.js  styles.css
docs/: art-protocol.md
docs/art-protocol-examples/: 01-minimal-exploration.yaml  02-edgar-library-discovery.yaml  03-variant-prompts-and-feedback.yaml  04-selected-candidate.yaml  05-stale-requirement.yaml  06-spot-illustration.yaml
notes/: product-bootstrap.md  product-story-direction.md  product.md
schemas/: art-brief-v1.schema.json  art-brief-v2.schema.json  art-brief-v3.schema.json
scripts/: migrate-legacy-production-state
src/: art.rs  art_brief.rs  assets.rs  build.rs  cli.rs  cli_art_commands.rs  cli_build_commands.rs  cli_proof_command.rs  composition.rs  config.rs  diff.rs  discovery.rs  flow.rs  identity.rs  lib.rs  main.rs  manifest.rs  markdown.rs  migration.rs  model.rs  overrides.rs  package.rs  paragraph_ledger.rs  planning.rs  proof.rs  report.rs  storage.rs  text.rs  validation.rs
tests/: e2e.rs
tickets/: PORT_PLAN.md  README.md  upstream-v2.2.1.toml
tickets/pending/: IDML-001.md  IDML-002.md  IDML-003.md  IDML-004.md  IDML-005.md  IDML-006.md  IDML-007.md  IDML-008.md  IDML-009.md  IDML-010.md  IDML-011.md  IDML-012.md  IDML-013.md  IDML-014.md  IDML-015.md  IDML-016.md
website/: .gitignore  README.md  index.html
website/src/: input.css
