[package]
name = "compositor"
version = "0.1.0"
edition = "2021"
description = "Deterministic Markdown-to-book production tooling"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
toml = "0.8"
